# FYP

./: README.md  app.py  csv_viz.py  extractor.py  kg_extractor.py  kg_generator.py  kg_generator_nala.py  latex_ocr_test.py  latex_ocr_test_gemini.py  llm_wrappers.py  nala_api_test.py  nala_wrappers.py  pyproject.toml  question_bank.csv  question_bank.txt  system_prompt.md  system_prompt_simple.md  temp_test.py  topic_extraction_test.py  topic_labelling.py  topic_list_extractor.py  topic_output.txt
latex_ocr_test/: latex_ocr_test.py  latex_ocr_test_gemini.py  linalg_qns.md  question_bank.csv  topic_labelling.py
linalg.md/: output.md
sources/output/: 3 - Complex Differentiation.md  4 - Complex Integration.md
sources/reference markdown/: 1 - Linear Algebra.md  2 - Complex Numbers.md  3 - Complex Differentiation.md  4 - Complex Integration.md  knowledge_graph.graphml
