[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.57.0",
    "jsonpath-ng>=1.7.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pix2text[vlm]>=1.1.6",
    "python-dotenv>=1.2.1",
]
